--- a/templates/book/about.html
+++ b/templates/book/about.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'book/base.html' %}
 
 {% load staticfiles %}
 
@@ -6,11 +6,11 @@
 
 {% block body_block %}
     <div class="page-header">
-                <h1>About</h1>
-            </div>
+                <h1>About Me</h1>
+		<p> Hello i'am firda, welcome to my django website :) </p>
             <div>
-            <p></strong>.</p>
+            <p></strong>Thanks,</p>
 
-            <img  width="90" height="100" src="{% static "images/firda.jpg" %}" alt="Picture of Firda" /> <!-- New line -->
+            <img  width="120" height="130" src="{% static "images/firda.jpg" %}" alt="Picture of Firda" /> <!-- New line -->
             </div>
 {% endblock %}
